--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,12 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+
+<p>[93]	Jianghao Xiong*, Haizheng Zhong, Dewen Cheng*, Shin-Tson Wu, and Yongtian Wang*, "Full degree-of-freedom polarization hologram by freeform exposure and inkjet printing," <strong>PhotoniX</strong>, 4, 35 (2023).<a href="https://doi.org/10.1186/s43074-023-00111-6"> DOI: 10.1186/s43074-023-00111-6</a></p>
+
+<p>[92]	Dewen Cheng, Yue Liu*, Hailong Chen, Chen Chen, and Yongtian Wang, "Design of a curved-target ultrashort throw projector based on predistortion and illumination precorrection," <strong>Applied Optics</strong>, 62(29), 7837-7843 (2023).<a href="https://doi.org/10.1364/AO.495605"> DOI: 10.1364/AO.495605</a></p>
+
+
 <p class="class2">[91]	程德文*, 黄逸伦, 李阳, 侯起超, 李丹阳, 张甜, 陈海龙, 王涌天. “超短焦偏振折反射虚拟现实镜头设计方法,” <strong>光学学报</strong>, 43(15): 1522001, 2023.<a href="http://www.opticsjournal.net/Articles/OJf3a28b37bab08e6f/Abstract">DOI: 10.3788/AOS230757</a><strong> (特邀论文)</strong></p>
 <p>Dewen Cheng*, Yilun Huang, Yang Li, Qichao Hou, Danyang Li, Tian Zhang, Hailong Chen, Yongtian Wang. “Design method of ultrashort focal polarization catadioptric virtual reality lenses,” <strong>Acta Optica Sinica</strong>, 43(15): 1522001, 2023. <a href="http://www.opticsjournal.net/Articles/OJf3a28b37bab08e6f/Abstract">DOI: 10.3788/AOS230757</a><strong> (Invited paper)</strong></p>
 <p>[90]	Dewen Cheng, Danyang Li, Cheng Yao*, Hailong Chen, Cheng Chi, and Yongtian Wang, "Automatic control method for freeform surface shapes," <strong>Optics Express</strong>, 31(18), 29019-29036 (2023).<a href="https://doi.org/10.1364/OE.495788"> DOI: 10.1364/OE.495788</a></p>
