--- a/news.html
+++ b/news.html
@@ -61,6 +61,9 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2023-10-14] 我们有关全自由度液晶全息器件以及近眼显示的论文在线发表于顶级期刊<strong>PhotoniX</strong>。<a href="https://mp.weixin.qq.com/s/VkZi5Motl3Oms2umc6p8iw">媒体宣传报道</a></p>
+<p>[2023-10-09] 我们有关曲面上短焦投影系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
+
 <p>[2023-08-18] 我们有关超短焦偏振折反射虚拟现实镜头设计方法的<strong>特邀论文</strong>在线发表于<strong>光学学报</strong>。</p>
 <p>[2023-08-16] 我们有关自由曲面面形自动控制方法的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-08-01] 我们有关基于深度学习进行自由曲面成像系统多解快速自动化设计的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
