--- a/members.html
+++ b/members.html
@@ -89,7 +89,7 @@
 															
 															<h3 align="left"><a href="wyt_personal.html">王涌天</a></h3>
                                                             <p class="class2" align="left">博士 教授 博士生导师</p>
-                                                            <p class="class2" align="left">国家杰青、教育部创新团队带头人</p>
+                                                            <p class="class2" align="left">国家级领军人才、教育部创新团队带头人</p>
                                                             <p class="class2" align="left">SPIE、IET、OSA、COS、CIS会士（Fellow）</p>
                                                             <p class="class2" align="left">研究方向：技术光学、虚拟现实与增强现实</p>
                                                             <p class="class2" align="left">Email：wyt@bit.edu.cn</p>
@@ -119,7 +119,7 @@
 															
 															<h3 align="left"><a href="cdw_personal.html">程德文</a></h3>
                                                             <p class="class2" align="left">博士 教授 博士生导师</p>
-                                                            <p class="class2" align="left">国家优青、万人计划青年拔尖人才、北理工特立青年学者</p>
+                                                            <p class="class2" align="left">国家级领军人才、国家级青年人才、北理工特立青年学者</p>
                                                             <p class="class2" align="left">研究方向：光学设计、自由曲面光学、虚拟现实和增强现实、视光学、全息显示</p>
 
                                                             <p class="class2" align="left">博士：北京理工大学</p>
