--- a/wyt_personal.html
+++ b/wyt_personal.html
@@ -75,7 +75,7 @@
 <h3 align="left">Email：wyt@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>王涌天，男，博士。北京理工大学杰出教授，教育部创新团队带头人、杰青，光电学院和计算机学院博导，北京市混合现实与新型显示工程技术研究中心主任。</p>
+<p>王涌天，男，博士。北京理工大学杰出教授，国家级领军人才、教育部创新团队带头人，光电学院和计算机学院博导，北京市混合现实与新型显示工程技术研究中心主任。</p>
 
 
 <h3>社会与学术兼职</h3>
