--- a/yt_personal_en.html
+++ b/yt_personal_en.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>杨通 - 北理工光学成像与计算实验室</title>
+		<title>Tong Yang - BIT OPTICAL IMAGING & COMPUTING LAB</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -69,34 +69,38 @@
                                                 
                                                 <div class="col-9">
 
-<h2 align="left">杨通</h2>
-<h3 align="left">博士 长聘副教授/特别研究员 博士生导师</h3>
+<h2 align="left">Tong Yang</h2>
+<h3 align="left">Ph.D., Tenured Associate Professor, Doctoral Supervisor</h3>
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
-
-<p><a href="yt_personal_en.html">Click here for English webpage</a></p>
+<p><a href="yt_personal.html">中文网页</a></p>
 <p>&nbsp;</p>
-<h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院长聘副教授/特别研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、AR显示、光学与计算成像、衍射与微纳光学等方面。主持国家重点研发计划课题、国家自然科学基金面上项目与青年项目、北京市自然科学基金面上项目、和企业/研究所合作的技术开发等多项纵向与横向项目。发表论文50余篇，其中以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021年影响因子20.257）、Photonics Research、Optics Letters、Optics Express等期刊发表录用论文30余篇。已获得授权发明专利41项，包括美国专利16项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得校级优秀学位论文、市级或校级优秀毕业生、国家奖学金等荣誉称号，或者在光学设计竞赛中获奖。</p>
-<h3>教育经历</h3>
-<p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
-<p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
+
+<h3>EDUCATION</h3>
+<p>2012.08-2017.07, Tsinghua University, Optical Engineering, Ph.D.</p>
+<p>2008.09-2012.06, Tianjin University, Optoelectronic Information Engineering, Bachelor</p>
 
 
-<h3>工作经历</h3>
+<h3>WORKING EXPERIENCES</h3>
 
-<p>2022.07-至今，北京理工大学光电学院，长聘副教授/特别研究员</p>
-<p>2017.08-2022.06，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
+<p>2022.07-present, Associate Professor, Beijing Institute of Technology</p>
+<p>2017.08-2022.06, Assistant Professor, Beijing Institute of Technology</p>
 
-<h3>研究领域</h3>
-<p>自由曲面光学、光学设计、光学与计算成像、衍射与微纳光学、AR显示、机器学习</p>
 
-<h3>主讲课程</h3>
-<p>主讲本科生课程《光学系统设计与工艺》与《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
+<h3>COURSES TEACHING</h3>
+<p>Complex Functions & Mathematics Physics Equations (fall): 2018-2022</p>
+<p>Optical System Design and Fabrication (spring, fall): 2023</p>
+<p>Freeform Optics (fall): 2019-2023</p>
 
-<h3>学术兼职</h3>
-<p>OPTICA、SPIE、EOS会员。Light: Science & Applications、Optics Express、Optics and Lasers in Engineering、Optics and Laser Technology、Applied Optics、JOSA A、光学学报、激光与光电子学进展等近20个国内外期刊的审稿人。中国激光杂志社第三届青年编辑委员会委员、《光学学报》期刊青年编委</p>
+<h3>RESEARCH INTERESTS</h3>
+<p>Freeform optics, Optical system design, VR and AR display, Computational imaging, Diffractive optics and metasurface
+</p>
 
-<h3>代表性学术成果</h3>
+<h3>AWARDS AND HONOURS</h3>
+<p>Young Elite Scientist Sponsorship Program by China Association for Science and Technology, in 2020</p>
+<p>National Outstanding Doctoral Dissertation in Optical Engineering (Outstanding Award, only five people nationwide), honored by Chinese Society for Optical Engineering, in 2019. Title of Dissertation: Design method of freeform imaging systems based on a point-by-point construction-iteration process</p>
+<p>Jin Guofan Prize for Excellent Youth of China Instrument and Control Society Scholarships, in 2018</p>
+
+<h3>PEER-REVIEWED JOURNAL PUBLICATIONS</h3>
 <p></p>
 
 
@@ -149,7 +153,7 @@
 
 <p>[23] Tong Yang, Dewen Cheng*, and Yongtian Wang, "Aberration analysis for freeform surface terms overlay on general decentered and tilted optical surfaces," <strong>Optics Express</strong> 26(6), 7751-7770 (2018).</p>
 
-<p>[24] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). <strong>(Nature旗下期刊，2021年影响因子20.257)</strong></p>
+<p>[24] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). </p>
 
 <p>[25] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of freeform imaging systems with linear field-of-view using a construction and iteration process,” <strong>Optics Express</strong> 22, 3362-3374 (2014).</p>
 
