--- a/news.html
+++ b/news.html
@@ -61,6 +61,8 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2024-01-15] 我们有关大视场二维扩瞳全息光栅波导设计与加工的论文在线发表于<strong>光学学报</strong>。</p>
+<p>[2023-11-08] 我们有关曲面光源蒙特卡罗建模方法的论文在线发表于<strong>光学学报</strong>。</p>
 <p>[2023-10-14] 我们有关全自由度液晶全息器件以及近眼显示的论文在线发表于顶级期刊<strong>PhotoniX</strong>。<a href="https://mp.weixin.qq.com/s/VkZi5Motl3Oms2umc6p8iw">媒体宣传报道</a></p>
 <p>[2023-10-09] 我们有关曲面上短焦投影系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
 
