--- a/publications.html
+++ b/publications.html
@@ -99,8 +99,18 @@ a:active {
 									<section class="box features">
 										<h2 class="major"><span>期刊论文</span></h2>
 
+
+
+<h3>2024年</h3>
+
+
+<p class="class2">[96]	程德文*, 倪栋伟, 吕鑫，王永东，杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
+<p>Dewen Cheng*, Dongwei Ni, Xin Lv, Yongdong Wang, Tong Yang, Yongtian Wang. “Design and fabrication of 2D exit pupil expansion holographic grating waveguide with large field of view,” <strong>Acta Optica Sinica</strong>, 44(2): 0222001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
+
 <h3>2023年</h3>
 
+<p class="class2">[95]	汤海松, 毛祥龙, 冯泽心*, 李浩然. “曲面光源蒙特卡罗建模方法,” <strong>光学学报</strong>, 43(21): 2122001, 2023.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJe6b60ce74f38650c">DOI: 10.3788/AOS230880</a></p>
+<p>Haisong Tang*, Xianglong Mao, Zexin Feng, Haoran Li. “Monte Carlo modeling method for furface light source,” <strong>Acta Optica Sinica</strong>, 43(21): 2122001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJe6b60ce74f38650c">DOI: 10.3788/AOS230880</a></p>
 
 <p>[94]	Jianghao Xiong*, Haizheng Zhong, Dewen Cheng*, Shin-Tson Wu, and Yongtian Wang*, "Full degree-of-freedom polarization hologram by freeform exposure and inkjet printing," <strong>PhotoniX</strong>, 4, 35 (2023).<a href="https://doi.org/10.1186/s43074-023-00111-6"> DOI: 10.1186/s43074-023-00111-6</a></p>
 
