--- a/publications.html
+++ b/publications.html
@@ -109,8 +109,8 @@ a:active {
 
 <h3>2023年</h3>
 
-<p class="class2">[95]	汤海松, 毛祥龙, 冯泽心*, 李浩然. “曲面光源蒙特卡罗建模方法,” <strong>光学学报</strong>, 43(21): 2122001, 2023.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJe6b60ce74f38650c">DOI: 10.3788/AOS230880</a></p>
-<p>Haisong Tang*, Xianglong Mao, Zexin Feng, Haoran Li. “Monte Carlo modeling method for furface light source,” <strong>Acta Optica Sinica</strong>, 43(21): 2122001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJe6b60ce74f38650c">DOI: 10.3788/AOS230880</a></p>
+<p class="class2">[95]	汤海松, 毛祥龙*, 冯泽心*, 李浩然. “曲面光源蒙特卡罗建模方法,” <strong>光学学报</strong>, 43(21): 2122001, 2023.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJe6b60ce74f38650c">DOI: 10.3788/AOS230880</a></p>
+<p>Haisong Tang, Xianglong Mao*, Zexin Feng*, Haoran Li. “Monte Carlo modeling method for furface light source,” <strong>Acta Optica Sinica</strong>, 43(21): 2122001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJe6b60ce74f38650c">DOI: 10.3788/AOS230880</a></p>
 
 <p>[94]	Jianghao Xiong*, Haizheng Zhong, Dewen Cheng*, Shin-Tson Wu, and Yongtian Wang*, "Full degree-of-freedom polarization hologram by freeform exposure and inkjet printing," <strong>PhotoniX</strong>, 4, 35 (2023).<a href="https://doi.org/10.1186/s43074-023-00111-6"> DOI: 10.1186/s43074-023-00111-6</a></p>
 
