--- a/yt_personal.html
+++ b/yt_personal.html
@@ -188,7 +188,7 @@
 <p>[51]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).</p>
 <p class="class2">[52]	程德文*, 陈海龙, 王涌天, 杨通. “复杂光学曲面数理描述和设计方法研究,” <strong>光学学报</strong>, 43(8): 0822008, 2023.<strong> (封底文章、特邀综述)</strong></p>
 <p>Dewen Cheng*, Hailong Chen, Yongtian Wang, Tong Yang. “Mathematical description and design methods of complex optical surfaces,” <strong>Acta Optica Sinica</strong>, 43(8): 0822008, 2023.<strong> (Back cover paper, Invited Review)</strong></p>
-<p class="class2">[53]	程德文*, 倪栋伟, 吕鑫，王永东，杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.</p>
+<p class="class2">[53]	程德文*, 倪栋伟, 吕鑫, 王永东, 杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.</p>
 <p>Dewen Cheng*, Dongwei Ni, Xin Lv, Yongdong Wang, Tong Yang, Yongtian Wang. “Design and fabrication of 2D exit pupil expansion holographic grating waveguide with large field of view,” <strong>Acta Optica Sinica</strong>, 44(2): 0222001, 2024. </p>
 
 
