--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -121,7 +121,7 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <p></p>
 
 
-<p class="class2">[94]	程德文*, 倪栋伟, 吕鑫，王永东，杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
+<p class="class2">[94]	程德文*, 倪栋伟, 吕鑫, 王永东, 杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
 <p>Dewen Cheng*, Dongwei Ni, Xin Lv, Yongdong Wang, Tong Yang, Yongtian Wang. “Design and fabrication of 2D exit pupil expansion holographic grating waveguide with large field of view,” <strong>Acta Optica Sinica</strong>, 44(2): 0222001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
 
 <p>[93]	Jianghao Xiong*, Haizheng Zhong, Dewen Cheng*, Shin-Tson Wu, and Yongtian Wang*, "Full degree-of-freedom polarization hologram by freeform exposure and inkjet printing," <strong>PhotoniX</strong>, 4, 35 (2023).<a href="https://doi.org/10.1186/s43074-023-00111-6"> DOI: 10.1186/s43074-023-00111-6</a></p>
