--- a/publications.html
+++ b/publications.html
@@ -104,7 +104,7 @@ a:active {
 <h3>2024年</h3>
 
 
-<p class="class2">[96]	程德文*, 倪栋伟, 吕鑫，王永东，杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
+<p class="class2">[96]	程德文*, 倪栋伟, 吕鑫, 王永东, 杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
 <p>Dewen Cheng*, Dongwei Ni, Xin Lv, Yongdong Wang, Tong Yang, Yongtian Wang. “Design and fabrication of 2D exit pupil expansion holographic grating waveguide with large field of view,” <strong>Acta Optica Sinica</strong>, 44(2): 0222001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
 
 <h3>2023年</h3>
