--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,10 @@ a:active {
 <h3>2024年</h3>
 
 
+<p>[98]	Yang Li, Dewen Cheng*, Yilun Huang, Qichao Hou, and Yongtian Wang, "Design and fabrication of a compact coaxial catadioptric augmented reality near-eye display enabled by genetic algorithm," <strong>Optics and Lasers in Engineering</strong>, 176, 108112 (2024).<a href="https://doi.org/10.1016/j.optlaseng.2024.108112"> DOI: 10.1016/j.optlaseng.2024.108112</a></p>
+
+<p>[97]	Dewen Cheng, Da Wang, Cheng Yao*, Yue Liu, Xilong Dai, and Yongtian Wang, "Thin and large depth-of-field compound-eye imaging for close-up photography," <strong>Photonics</strong>, 11(2), 107 (2024).<a href="https://doi.org/10.3390/photonics11020107"> DOI: 10.3390/photonics11020107</a></p>
+
 <p class="class2">[96]	程德文*, 倪栋伟, 吕鑫, 王永东, 杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
 <p>Dewen Cheng*, Dongwei Ni, Xin Lv, Yongdong Wang, Tong Yang, Yongtian Wang. “Design and fabrication of 2D exit pupil expansion holographic grating waveguide with large field of view,” <strong>Acta Optica Sinica</strong>, 44(2): 0222001, 2024. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ429722533581ba75">DOI: 10.3788/AOS230836</a></p>
 
