--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -121,6 +121,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <p></p>
 
 
+<p>[97]	Dewen Cheng*, He Wang, and Cheng Yao, "Development of a compact optical see-through head-mounted display with dual focal planes and spatial multiplexing using freeform prisms," <strong>IEEE Journal of Selected Topics in Quantum Electronics</strong>, 30(2), 0100210 (2024).<a href="https://doi.org/10.1109/JSTQE.2024.3359915"> DOI: 10.1109/JSTQE.2024.3359915</a></p>
+
 <p>[96]	Yang Li, Dewen Cheng*, Yilun Huang, Qichao Hou, and Yongtian Wang, "Design and fabrication of a compact coaxial catadioptric augmented reality near-eye display enabled by genetic algorithm," <strong>Optics and Lasers in Engineering</strong>, 176, 108112 (2024).<a href="https://doi.org/10.1016/j.optlaseng.2024.108112"> DOI: 10.1016/j.optlaseng.2024.108112</a></p>
 
 <p>[95]	Dewen Cheng, Da Wang, Cheng Yao*, Yue Liu, Xilong Dai, and Yongtian Wang, "Thin and large depth-of-field compound-eye imaging for close-up photography," <strong>Photonics</strong>, 11(2), 107 (2024).<a href="https://doi.org/10.3390/photonics11020107"> DOI: 10.3390/photonics11020107</a></p>
