--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@ a:active {
 											<section>
 											
 												<p>
-													近年来发表论文110余篇，SCI收录60余篇，授权国家发明专利40项(11项转化) ，国际专利5项(全部转化)。
+													近年来发表论文130余篇，SCI收录70余篇，授权国家发明专利40项(11项转化) ，国际专利5项(全部转化)。
 												</p>
 											</section>
 
@@ -103,6 +103,8 @@ a:active {
 
 <h3>2024年</h3>
 
+
+<p>[99]	Dewen Cheng*, He Wang, and Cheng Yao, "Development of a compact optical see-through head-mounted display with dual focal planes and spatial multiplexing using freeform prisms," <strong>IEEE Journal of Selected Topics in Quantum Electronics</strong>, 30(2), 0100210 (2024).<a href="https://doi.org/10.1109/JSTQE.2024.3359915"> DOI: 10.1109/JSTQE.2024.3359915</a></p>
 
 <p>[98]	Yang Li, Dewen Cheng*, Yilun Huang, Qichao Hou, and Yongtian Wang, "Design and fabrication of a compact coaxial catadioptric augmented reality near-eye display enabled by genetic algorithm," <strong>Optics and Lasers in Engineering</strong>, 176, 108112 (2024).<a href="https://doi.org/10.1016/j.optlaseng.2024.108112"> DOI: 10.1016/j.optlaseng.2024.108112</a></p>
 
