--- a/news.html
+++ b/news.html
@@ -61,6 +61,8 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+
+<p>[2024-02-29] 我们有关基于自由曲面棱镜的紧凑型双焦面视透型头戴显示系统的论文在线发表于<strong>IEEE Journal of Selected Topics in Quantum Electronics</strong>。</p>
 <p>[2024-02-15] 我们有关基于遗传算法的共轴折反AR近眼显示系统设计与制造的论文在线发表于<strong>Optics and Lasers in Engineering</strong>。</p>
 <p>[2024-01-25] 我们有关大景深复眼成像系统的论文在线发表于<strong>Photonics</strong>。</p>
 <p>[2024-01-15] 我们有关大视场二维扩瞳全息光栅波导设计与加工的论文在线发表于<strong>光学学报</strong>。</p>
