--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -121,6 +121,11 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <p></p>
 
 
+<p class="class2">[99]	杨通*, 王永东, 吕鑫, 程德文, 王涌天. 融合自由曲面光学与全息光学元件的成像与显示系统设计,” <strong>光学学报</strong>, 44(9): 0900001, 2024.<a href="https://www.opticsjournal.net/Articles/OJa733ea685ff3cda7/Abstract">DOI: 10.3788/AOS231830</a><strong> (封面文章、特邀综述)</strong></p>
+<p>Tong Yang*, Yongdong Wang, Xin Lü, Dewen Cheng, Yongtian Wang. “Design of imaging and display systems combining freeform optics and holographic optical elements,” <strong>Acta Optica Sinica</strong>, 44(9): 0900001, 2024. <a href="https://www.opticsjournal.net/Articles/OJa733ea685ff3cda7/Abstract">DOI: 10.3788/AOS231830</a><strong> (Cover paper, Invited review)</strong></p>
+
+<p>[98]	Yang Li, Dewen Cheng*, Qichao Hou, and Yongtian Wang,  "Dual-focal plane augmented reality near-eye display adopting liquid crystal variable retarder," <strong>IEEE Journal of Selected Topics in Quantum Electronics</strong>, 30(2), 6000408 (2024).<a href="https://doi.org/10.1109/JSTQE.2024.3370587"> DOI: 10.1109/JSTQE.2024.3370587</a><strong> (Invited paper)</strong></p>
+
 <p>[97]	Dewen Cheng*, He Wang, and Cheng Yao, "Development of a compact optical see-through head-mounted display with dual focal planes and spatial multiplexing using freeform prisms," <strong>IEEE Journal of Selected Topics in Quantum Electronics</strong>, 30(2), 0100210 (2024).<a href="https://doi.org/10.1109/JSTQE.2024.3359915"> DOI: 10.1109/JSTQE.2024.3359915</a></p>
 
 <p>[96]	Yang Li, Dewen Cheng*, Yilun Huang, Qichao Hou, and Yongtian Wang, "Design and fabrication of a compact coaxial catadioptric augmented reality near-eye display enabled by genetic algorithm," <strong>Optics and Lasers in Engineering</strong>, 176, 108112 (2024).<a href="https://doi.org/10.1016/j.optlaseng.2024.108112"> DOI: 10.1016/j.optlaseng.2024.108112</a></p>
