--- a/yt_personal.html
+++ b/yt_personal.html
@@ -94,7 +94,7 @@
 <p>主讲本科生课程《光学系统设计与工艺》与《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
 
 <h3>学术兼职</h3>
-<p>OPTICA、SPIE、EOS会员。Light: Science & Applications、Optics Express、Optics and Lasers in Engineering、Optics and Laser Technology、Applied Optics、JOSA A、光学学报、激光与光电子学进展等近20个国内外期刊的审稿人。中国激光杂志社第三届青年编辑委员会委员、《光学学报》期刊青年编委</p>
+<p>OPTICA、SPIE、EOS会员。Light: Science & Applications、Optics Express、Optics and Lasers in Engineering、Optics and Laser Technology、Applied Optics、JOSA A、光学学报、激光与光电子学进展等近20个国内外期刊的审稿人。中国激光杂志社第三届青年编辑委员会委员。《光学学报》、《红外与激光工程》期刊青年编委</p>
 
 <h3>代表性学术成果</h3>
 <p></p>
