--- a/yt_personal_en.html
+++ b/yt_personal_en.html
@@ -197,6 +197,7 @@
 <p>Dewen Cheng*, Hailong Chen, Yongtian Wang, Tong Yang. “Mathematical description and design methods of complex optical surfaces,” <strong>Acta Optica Sinica</strong>, 43(8): 0822008, 2023.<strong> (Back cover paper, Invited Review)</strong></p>
 <p class="class2">[54]	程德文*, 倪栋伟, 吕鑫, 王永东, 杨通, 王涌天. “大视场二维扩瞳全息光栅波导设计与加工,” <strong>光学学报</strong>, 44(2): 0222001, 2024.</p>
 <p>Dewen Cheng*, Dongwei Ni, Xin Lv, Yongdong Wang, Tong Yang, Yongtian Wang. “Design and fabrication of 2D exit pupil expansion holographic grating waveguide with large field of view,” <strong>Acta Optica Sinica</strong>, 44(2): 0222001, 2024. </p>
+<p>[55]	Xin Lyu, Tong Yang, Tianxiang Lan, Yongdong Wang, Xiaolan Liu, Yongtian Wang, and Dewen Cheng*, "Design and fabrication of two-dimensional holographic grating waveguide with large field of view and high uniformity," <strong>Optics and Lasers in Engineering</strong>, 179, 108225 (2024).</p>
 
 
 
