--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,7 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[100]	Xin Lyu, Tong Yang, Tianxiang Lan, Yongdong Wang, Xiaolan Liu, Yongtian Wang, and Dewen Cheng*, "Design and fabrication of two-dimensional holographic grating waveguide with large field of view and high uniformity," <strong>Optics and Lasers in Engineering</strong>, 179, 108225 (2024).<a href="https://doi.org/10.1016/j.optlaseng.2024.108225"> DOI: 10.1016/j.optlaseng.2024.108225</a></p>
 
 <p class="class2">[99]	杨通*, 王永东, 吕鑫, 程德文, 王涌天. 融合自由曲面光学与全息光学元件的成像与显示系统设计,” <strong>光学学报</strong>, 44(9): 0900001, 2024.<a href="https://www.opticsjournal.net/Articles/OJa733ea685ff3cda7/Abstract">DOI: 10.3788/AOS231830</a><strong> (封面文章、特邀综述)</strong></p>
 <p>Tong Yang*, Yongdong Wang, Xin Lü, Dewen Cheng, Yongtian Wang. “Design of imaging and display systems combining freeform optics and holographic optical elements,” <strong>Acta Optica Sinica</strong>, 44(9): 0900001, 2024. <a href="https://www.opticsjournal.net/Articles/OJa733ea685ff3cda7/Abstract">DOI: 10.3788/AOS231830</a><strong> (Cover paper, Invited review)</strong></p>
