--- a/news.html
+++ b/news.html
@@ -62,6 +62,7 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
 
 
+<p>[2024-05-01] 我们有关大视场高均匀性二维全息波导设计与制造的论文在线发表于<strong>Optics and Lasers in Engineering</strong>。</p>
 <p>[2024-04-18] 我们有关融合自由曲面光学与全息光学元件的成像与显示系统设计的<strong>特邀综述论文</strong>在线发表于<strong>光学学报</strong>，并被选为<strong>封面文章</strong>。<a href="https://mp.weixin.qq.com/s/7CxR-A5ILx35BJlJsR4dUQ">媒体宣传报道</a></p>
 <div class="row"><div class="col-4"><section class="box feature">
 <a class="image featured"><img src="images/holocover.png" alt="" /></a>
