--- a/news.html
+++ b/news.html
@@ -61,7 +61,9 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-
+<p>[2024-06-08] 我们有关基于自由曲面全息元件的极简HUD系统设计研制的论文在线发表于Top期刊<strong>Optics & Laser Technology</strong>。</p>
+<p>[2024-05-06] 我们有关扩展光源照度调控自由曲面透镜设计的论文在线发表于Top期刊<strong>Optica</strong>。</p>
+<p>[2024-05-03] 我们有关高质量集成投影系统设计方法的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
 <p>[2024-05-01] 我们有关大视场高均匀性二维全息波导设计与制造的论文在线发表于<strong>Optics and Lasers in Engineering</strong>。</p>
 <p>[2024-04-18] 我们有关融合自由曲面光学与全息光学元件的成像与显示系统设计的<strong>特邀综述论文</strong>在线发表于<strong>光学学报</strong>，并被选为<strong>封面文章</strong>。<a href="https://mp.weixin.qq.com/s/7CxR-A5ILx35BJlJsR4dUQ">媒体宣传报道</a></p>
 <div class="row"><div class="col-4"><section class="box feature">
