--- a/news.html
+++ b/news.html
@@ -61,6 +61,37 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2024-08-24] 第十二届全国大学生光电设计竞赛“曦智杯”创意赛道决赛8月22-24日在西安电子科技大学举行。本实验室王达同学的团队（作品名称：智能翻转拍）最终<strong>获得一等奖</strong>！实验室教师程德文、杨通获得<strong>优秀指导教师奖</strong>。</p>
+
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/2024gdsa.jpg" alt="" /></a>
+</section></div>
+<div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/2024gdsb.jpg" alt="" /></a>
+</section></div>
+</div>  
+<p><a href="http://gd.p.moocollege.com/datacenter/news/detail?id=8144">获奖名单公告</a></p>
+
+<p>[2024-08-22] 第十二届全国大学生光电设计竞赛“宇瞳杯”光学设计赛道决赛8月21-22日在西安工业大学举行。本实验室蓝澜同学的团队最终<strong>获得一等奖！</strong>。另外，王达同学的团队<strong>获得三等奖</strong>。实验室教师杨通、程德文获得<strong>优秀指导教师奖</strong>。 </p>
+<div class="row"><div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/ytb2024a.jpg" alt="" /></a>
+</section></div>
+<div class="col-5"><section class="box feature">
+<a class="image featured"><img src="images/ytb2024b.jpg" alt="" /></a>
+</section></div>
+</div> 
+<p><a href="http://gd.p.moocollege.com/datacenter/news/detail?id=8144">获奖名单公告</a></p>
+<p>[2024-08-20] 欢迎傅润秋、辛胤杰、陈红霞、傅峥尧、何天赐、蓝澜、连漪、邱汉妮、王紫东、张浩东、赵申雨11位同学加入实验室团队！</p>     
+<p>[2024-08-19] 我们有关基于光学数字联合优化设计自由曲面近眼显示系统的论文在线发表于<strong>Frontiers in Physics</strong>。</p>
+<p>[2024-08-13] 我们有关集成成像光场获取的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
+<p>[2024-06-20] 祝贺毛卜玉同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
+<p>[2024-06-20] 祝贺毛卜玉同学被评为<strong>北京市优秀毕业生</strong>；祝贺徐慧明、毛卜玉2位同学被评为<strong>北京理工大学优秀毕业生</strong>。</p>
+<p>[2024-06-20] 实验室2024届研究生毕业。感谢李阳、陈椿元、戴玺隆、黄逸伦、廖清明、毛卜玉、伍泽元、徐慧明8位同学为实验室作出的贡献，祝大家前程似锦！</p>
+<div class="row"><div class="col-8"><section class="box feature">
+<a class="image featured"><img src="images/2024grad.jpg" alt="" /></a>
+</section></div></div>
+<p>[2024-06-15] 我们有关基于非球面微透镜阵列的集成近眼显示系统的论文在线发表于<strong>Optics and Lasers in Engineering</strong>。</p>
+<p>[2024-06-14] 我们有关近眼显示系统场曲分析与优化的论文在线发表于<strong>Displays</strong>。</p>
 <p>[2024-06-08] 我们有关基于自由曲面全息元件的极简HUD系统设计研制的论文在线发表于Top期刊<strong>Optics & Laser Technology</strong>。</p>
 <p>[2024-05-06] 我们有关扩展光源照度调控自由曲面透镜设计的论文在线发表于Top期刊<strong>Optica</strong>。</p>
 <p>[2024-05-03] 我们有关高质量集成投影系统设计方法的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
