--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,11 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+
+<p>[106]	Huiming Xu, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Compact freeform near-eye display system design enabled by optical-digital joint optimization," <strong>Frontiers in Physics</strong>, 12, 1440129 (2024).<a href="https://doi.org/10.3389/fphy.2024.1440129"> DOI: 10.3389/fphy.2024.1440129</a></p>
+<p>[105]	Yunqi Zhou, Cheng Yao, Dewen Cheng*, and Yongtian Wang, "Efficient light field acquisition for integral imaging with adaptive viewport optimization," <strong>Optics Express</strong>, 32(18), 31280-31296 (2024).<a href="https://doi.org/10.1364/OE.531264"> DOI: 10.1364/OE.531264</a></p>
+<p>[104]	Da Wang, Dewen Cheng*, Cheng Yao, and Qiwei Wang, "Field curvature analysis and optimization method for near-eye display systems," <strong>Displays</strong>, 84, 102777 (2024).<a href="https://doi.org/10.1016/j.displa.2024.102777"> DOI: 10.1016/j.displa.2024.102777</a></p>
+<p>[103]	Dewen Cheng, Yue Liu*, Cheng Yao, Da Wang, Chen Chen, and Yongtian Wang, "Design of elemental-image-predistortion and splicing seamless integral near-eye display based on aspherical microlens arrays," <strong>Optics and Lasers in Engineering</strong>, 181, 108365 (2024).<a href="https://doi.org/10.1016/j.optlaseng.2024.108365"> DOI: 10.1016/j.optlaseng.2024.108365</a></p>
 <p>[102]	Yongdong Wang, Tong Yang*, Xin Lyu, Dewen Cheng, and Yongtian Wang, "Ultra-simplified and low-cost head-up display system enabled by freeform holographic element," <strong>Optics & Laser Technology</strong>, 178, 111253 (2024).<a href="https://doi.org/10.1016/j.optlastec.2024.111253"> DOI: 10.1016/j.optlastec.2024.111253</a></p>
 
 <p>[101]	Xilong Dai, Yuefan Shan, Da Wang, Tong Yang, Dewen Cheng*, and Yongtian Wang, "Mapping-based design method for high-quality integral projection system," <strong>Optics Express</strong>, 32(10), 18379-18398 (2024).<a href="https://doi.org/10.1364/OE.520766"> DOI: 10.1364/OE.520766</a></p>
