--- a/news.html
+++ b/news.html
@@ -61,6 +61,15 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+
+
+
+<p>[2024-10-28] 我们有关双焦面自由曲面HUD系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
+<p>[2024-10-28] 我们有关自由曲面衍射元件进行光束整形的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
+<p>[2024-10-23] 我们有关偏振复用Moiré超透镜边缘增强成像的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
+<p>[2024-09-05] 我们有关逆向设计多焦点超透镜的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
+
+
 <p>[2024-08-24] 第十二届全国大学生光电设计竞赛“曦智杯”创意赛道决赛8月22-24日在西安电子科技大学举行。本实验室王达同学的团队（作品名称：智能翻转拍）最终<strong>获得一等奖</strong>！实验室教师程德文、杨通获得<strong>优秀指导教师奖</strong>。</p>
 
 <div class="row"><div class="col-5"><section class="box feature">
