--- a/news.html
+++ b/news.html
@@ -62,14 +62,58 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
 
 
+<p><strong>[最后更新于：2025-12-25]</strong></p>
+
+<p>[2025-12-19] 我们有关高对比度辐照度控制快速自由曲面光学设计的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-12-13] 我们有关近视控制镜片设计中离散分节面建模的改进方法的论文在线发表于<strong>Advanced Photonics Nexus</strong>。</p>
+<p>[2025-12-08] 我们有关二维扩瞳全彩体全息AR显示波导的论文在线发表于Top期刊<strong>Laser & Photonics Reviews</strong>。</p>
+<p>[2025-12-08] 我们有关基于二次曲面的自由曲面多反系统设计的论文在线发表于Top期刊<strong>Optics & Laser Technology</strong>。</p>
+<p>[2025-12-04] 我们有关变焦系统结构自动化生成的论文在线发表于<strong>Applied Optics</strong>。</p> 
+<p>[2025-12-01] 我们有关校正变焦VR显示系统中衍射透镜色差的论文在线发表于Top期刊<strong>Photonics Research</strong>。</p>
+<p>[2025-11-04] 我们有关基于共焦性质与矢量像差理论的失对称系统设计的论文在线发表于Top期刊<strong>Optics & Laser Technology</strong>。</p>
+<p>[2025-10-27] 我们有关人工智能辅助成像光学系统设计的<strong>特邀综述论文</strong>在线发表于<strong>光学学报</strong>，并被选为<strong>亮点文章</strong>。<a href="https://mp.weixin.qq.com/s/FLa8qEQMFtVpVZyggLraeQ">媒体宣传报道</a></p>
+
+
+<p>[2025-10-08] 我们有关与蒙日-安培方程相关的最优传输问题的物理驱动深度神经网络求解的论文在线发表于Top期刊<strong>CAAI Transactions on Intelligence Technology</strong>。</p>
+<p>[2025-09-23] 我们有关基于光学数字联合优化的长波红外系统设计与研制的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-09-05] 欢迎全峰焕、周丰超、冯玉葆、李凤骐、刘奇、王海健、王家璐、王润桐、王新宇、温雨晴、阳旻晟11位同学加入实验室团队！</p>   
+<p>[2025-08-28] 我们有关基于可微光线追迹设计双非球面眼镜的论文在线发表于<strong>Applied Optics</strong>。</p> 
+<p>[2025-08-20] 第十三届全国大学生光电设计竞赛“宇瞳杯”光学设计赛道决赛8月19-20日在浙江大学举行。本实验室队伍获得<strong>一等奖2项（蓝澜团队、赵申雨团队）、二等奖2项（傅峥尧团队、刘永琦团队）、三等奖1项（陈国根团队）</strong>。实验室教师杨通、程德文获得<strong>优秀指导教师奖</strong>。 </p>
+<div class="row"><div class="col-8"><section class="box feature">
+<a class="image featured"><img src="images/2025yutongbei.jpg" alt="" /></a>
+</section></div>
+</div> 
+<p><a href="https://gd.moocollege.com/datacenter/news/detail?id=9567">获奖名单公告</a></p>
+<p>[2025-08-15] 我们有关曲面层压的紧凑型Pancake VR系统设计与研制的论文在线发表于<strong>Advanced Intelligent Systems</strong>。</p>
+<p>[2025-08-06] 我们有关用于定量相位和边缘增强成像的双模式莫尔超透镜的论文在线发表于<strong>Nanophotonics</strong>。</p>
+<p>[2025-07-31] 我们有关复杂成像系统全自动设计的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-07-23] 我们有关基于B样条函数和连续性约束可微设计连续相位板的论文在线发表于<strong>Applied Optics</strong>。</p>
+<p>[2025-07-23] 我们有关倾斜投射大视场自由曲面头戴显示系统设计与研制的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-07-21] 我们有关基于Alvarez超透镜和传统透镜混合的连续变焦系统设计的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-07-11] 我们有关基于自由曲面全息元件的大视场、大虚像深度、大眼盒AR近眼显示系统研制的论文在线发表于Top期刊<strong>Advanced Science</strong>。</p>
+<p>[2025-07-11] 我们有关可微设计自由曲面透镜实现部分相干光光束整形的论文在线发表于<strong>Applied Optics</strong>。</p>
+<p>[2025-06-25] 祝贺刘永琦同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
+<p>[2025-06-25] 祝贺高丽娜、周昀琦2位同学被评为<strong>北京市优秀毕业生</strong>以及<strong>北京理工大学优秀毕业生</strong>。</p>
+<p>[2025-06-25] 实验室2025届研究生毕业。感谢高丽娜、蓝天翔、刘晋纲、刘永琦、潘兴华、张源哲、周昀琦7位同学为实验室作出的贡献，祝大家前程似锦！</p>
+<div class="row"><div class="col-8"><section class="box feature">
+<a class="image featured"><img src="images/2025grad.jpg" alt="" /></a>
+</section></div></div>
+<p>[2025-06-24] 我们有关低畸变、均匀分辨率的时分复用超短投影系统设计的论文在线发表于<strong>Advanced Photonics Research</strong>。</p>
+<p>[2025-06-23] 我们有关面向LCOS屏的紧凑型自由曲面投影光机设计和研制的论文在线发表于<strong>Advanced Intelligent Systems</strong>。</p>
+<p>[2025-06-17] 我们有关基于片上空分超表面的多通道光场调控的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-06-10] 我们有关基于光学设计模型驱动网络的自由曲面成像系统生成的论文在线发表于Top期刊<strong>Optics & Laser Technology</strong>。</p>
+<p>[2025-04-22] 我们有关大孔径双焦面VR HUD系统设计的论文在线发表于<strong>Optics and Lasers in Engineering</strong>。</p>
+<p>[2025-03-16] 我们有关可微设计多自由曲面实现倾斜平面照明的论文在线发表于<strong>Optics Letters</strong>。</p>
+<p>[2025-03-05] 我们有关可编程电子感应彩色路由器阵列的论文在线发表于Top期刊<strong>Light: Science & Applications</strong>。</p>
+<p>[2025-02-28] 我们有关基于NURBS曲面渐进多焦镜可微设计的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-02-25] 我们有关基于偏振分光和液晶可变延迟器的多焦面近眼显示系统设计研制的论文在线发表于<strong>Optics Express</strong>。</p>
+<p>[2025-02-12] 我们有关基于复值神经网络的多深度全息显示的论文在线发表于<strong>Optics Express</strong>。</p>
 
 
 <p>[2024-10-28] 我们有关双焦面自由曲面HUD系统设计的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2024-10-28] 我们有关自由曲面衍射元件进行光束整形的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
 <p>[2024-10-23] 我们有关偏振复用Moiré超透镜边缘增强成像的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
 <p>[2024-09-05] 我们有关逆向设计多焦点超透镜的论文在线发表于Top期刊<strong>Optics Express</strong>。</p>
-
-
 <p>[2024-08-24] 第十二届全国大学生光电设计竞赛“曦智杯”创意赛道决赛8月22-24日在西安电子科技大学举行。本实验室王达同学的团队（作品名称：智能翻转拍）最终<strong>获得一等奖</strong>！实验室教师程德文、杨通获得<strong>优秀指导教师奖</strong>。</p>
 
 <div class="row"><div class="col-5"><section class="box feature">
@@ -560,7 +604,7 @@
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2023 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2025 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
